fixing background colour and changing text properties, aligning all tech stack icons

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,10 @@
   text-align: center;
 }
 
+body {
+  background-color: #212529;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
